Se modifica extencion del gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+
+dist
+
 # Compiled class file
 *.class
 
@@ -19,7 +22,7 @@
 *.tar.gz
 *.rar
 
-dist
+# Autogenerates
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
